--- a/index.html
+++ b/index.html
@@ -10,7 +10,96 @@
   <link rel="stylesheet" href="https://use.typekit.net/wah7vpz.css">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
+
 <body>
+
+  <header role="banner">
+    <!-- banner -->
+    <div class="banner-container relative">
+      <img class="img-flex" src="images/banner.jpg" alt="">
+      <div class="heading grid grid-middle absolute stretch">
+        <div class="unit stretch relative">
+          <div class="text-center absolute pin-center island-2 stretch">
+            <h1 class="tenez nina push-0">Postable Pastries</h1>
+            <h2 class="mega nobel-reg push-0">Deliverable and Delicious Christmas Cookies</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- nav -->
+    <nav class="push-0 pad-t-1-2 pad-b-1-2" role="navigation">
+      <div class="list-group-inline push-0 gutter-1-2">
+        <div class="grid">
+          <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
+             <a class="btn btn-ghost milli current" href="#">Home</a>
+          </div>
+          <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
+             <a class="btn btn-ghost milli" href="about.html">About</a>
+          </div>
+          <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
+             <a class="btn btn-ghost milli" href="#">Featured</a>
+          </div>
+          <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
+             <a class="btn btn-ghost milli" href="#">Recipes</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+  </header>
+
+  <main class="pad-t" role="main">
+
+
+    <!-- CARDS -->
+
+    <div class="grid island-1-4">
+
+      <div class="unit xs-1 s-1 m-1 l-1 xl-1 push">
+        <div class="grid content-card">
+
+          <div class="unit xs-1 s-1 m-1 l-1 xl-1 push">
+            <div class="">
+              <h3>Featured Recipes</h3>
+              <p>Take a look at our most popular Postable Pastries recipes this month!</p>
+            </div>
+          </div>
+
+          <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 push">
+            <div class="content-card island-2">
+              <h4>CARD 2</h4>
+            </div>
+          </div>
+
+          <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 push">
+            <div class="content-card island-2">
+              <h4>CARD 3</h4>
+            </div>
+          </div>
+
+          <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 push">
+            <div class="content-card island-2">
+              <h4>CARD 4</h4>
+            </div>
+          </div>
+
+          <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 push">
+            <div class="content-card island-2">
+              <h4>CARD 4</h4>
+            </div>
+          </div>
+        </div>
+    </div>
+  </div>
+
+</main>
+
+<!-- Footer -->
+<footer class="island">
+  <small>Footer Content</small>
+
+</footer>
+
 
 </body>
 </html>
