Add more content

--- a/index.html
+++ b/index.html
@@ -48,50 +48,77 @@
 
   </header>
 
-  <main class="pad-t" role="main">
-
-
+  <main class="" role="main">
+    <article class="">
     <!-- CARDS -->
 
     <div class="grid island-1-4">
 
       <div class="unit xs-1 s-1 m-1 l-1 xl-1 push">
-        <div class="grid content-card">
+        <div class="grid content-card-transparent">
 
           <div class="unit xs-1 s-1 m-1 l-1 xl-1 push">
-            <div class="">
-              <h3>Featured Recipes</h3>
-              <p>Take a look at our most popular Postable Pastries recipes this month!</p>
+            <div class="gutter-1-4">
+              <h3 class="exa nobel-reg push-1-4">Featured Recipes — January 2020</h3>
+              <!-- <p class="nobel-book">Take a look at our most popular Postable Pastries recipes this month!</p> -->
             </div>
           </div>
 
-          <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 push">
-            <div class="content-card island-2">
-              <h4>CARD 2</h4>
+          <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 push-1-2 gutter-1-4">
+            <div class="content-card card-height link-card">
+              <a href="recipe-a.html">
+                <div class="relative">
+                  <img class="img-flex img-bottom" src="images/choc-chip.jpg" alt="">
+                  <div class="absolute pin-c drop-title text-center img-flex">
+                    <h4 class="peta white-text nobel-book">Chocolate Chip</h4>
+                  </div>
+                </div>
+              </a>
             </div>
           </div>
 
-          <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 push">
-            <div class="content-card island-2">
-              <h4>CARD 3</h4>
+          <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 push-1-2 gutter-1-4">
+            <div class="content-card card-height link-card">
+              <a href="recipe-b.html">
+                <div class="relative">
+                  <img class="img-flex img-bottom" src="images/crinkle.jpg" alt="">
+                  <div class="absolute pin-c drop-title text-center img-flex">
+                    <h4 class="peta white-text nobel-book">Spiced Chocolate Crinkle Cookies</h4>
+                  </div>
+                </div>
+              </a>
             </div>
           </div>
 
-          <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 push">
-            <div class="content-card island-2">
-              <h4>CARD 4</h4>
+          <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 push-1-2 gutter-1-4">
+            <div class="content-card card-height link-card">
+              <a href="recipe-c.html">
+                <div class="relative">
+                  <img class="img-flex img-bottom" src="images/linzer.jpg" alt="">
+                  <div class="absolute pin-c drop-title text-center img-flex">
+                    <h4 class="peta white-text nobel-book">Linzer Cookies</h4>
+                  </div>
+                </div>
+              </a>
             </div>
           </div>
 
-          <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 push">
-            <div class="content-card island-2">
-              <h4>CARD 4</h4>
+          <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 push-1-2 gutter-1-4">
+            <div class="content-card card-height link-card">
+              <a href="recipe-d.html">
+                <div class="relative">
+                  <img class="img-flex img-bottom" src="images/trail-mix.jpg" alt="">
+                  <div class="absolute pin-c drop-title text-center img-flex">
+                    <h4 class="peta white-text nobel-book">Trail Mix Cookies</h4>
+                  </div>
+                </div>
+              </a>
             </div>
           </div>
-        </div>
+
     </div>
   </div>
-
+    </article>
 </main>
 
 <!-- Footer -->
