Add recipe contents

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
       <img class="img-flex" src="images/banner.jpg" alt="">
       <div class="heading grid grid-middle absolute stretch">
         <div class="unit stretch relative">
-          <div class="text-center absolute pin-center island-2 stretch">
+          <div class="text-center absolute pin-lc title">
             <h1 class="nina tenez push-0">Postable Pastries</h1>
             <h2 class="mega nobel-reg push-0">Deliverable and Delicious Christmas Cookies</h2>
           </div>
@@ -37,7 +37,7 @@
             <li> <a class="btn btn-ghost milli current" href="#">About</a> </li>
           </div>
           <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
-            <li> <a class="btn btn-ghost milli" href="#">Featured</a> </li>
+            <li> <a class="btn btn-ghost milli" href="featured.html">Featured</a> </li>
           </div>
           <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
             <li> <a class="btn btn-ghost milli" href="#">Recipes</a> </li>
@@ -48,10 +48,10 @@
 
   </header>
 
-  <main>
+  <main role="main">
 <!-- intro -->
     <article class="introduction">
-      <div class="grid">
+      <div class="grid island-1-2">
         <div class="content-card-transparent island-2">
 
 
@@ -98,7 +98,7 @@
 
   </main>
   <footer class="island">
-    <small>Footer Content</small>
+    <small class="micro nobel-book white-text">© Postable Pastries 2020</small>
 
   </footer>
 
