--- a/featured.html
+++ b/featured.html
@@ -34,13 +34,13 @@
       <div class="list-group-inline push-0 gutter-1-2">
         <div class="grid">
           <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
-             <a class="btn btn-ghost milli current" href="#">Home</a>
+             <a class="btn btn-ghost milli" href="index.html">Home</a>
           </div>
           <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
              <a class="btn btn-ghost milli" href="about.html">About</a>
           </div>
           <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
-             <a class="btn btn-ghost milli" href="featured.html">Featured</a>
+             <a class="btn btn-ghost milli current" href="featured.html">Featured</a>
           </div>
           <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
              <a class="btn btn-ghost milli" href="#">Recipes</a>
@@ -62,7 +62,7 @@
 
           <div class="unit xs-1 s-1 m-1 l-1 xl-1 push">
             <div class="gutter-1-4">
-              <h3 class="exa nobel-bold pink-text push-1-4">Featured Recipes</h3>
+              <h3 class="exa nobel-bold pink-text push-1-4">Best of January 2020</h3>
               <!-- <p class="nobel-book">Take a look at our most popular Postable Pastries recipes this month!</p> -->
             </div>
           </div>
