--- a/recipe-a.html
+++ b/recipe-a.html
@@ -19,7 +19,7 @@
       <img class="img-flex" src="images/banner.jpg" alt="">
       <div class="heading grid grid-middle absolute stretch">
         <div class="unit stretch relative">
-          <div class="text-center absolute pin-center island-2 stretch">
+          <div class="text-center absolute pin-lc title">
             <h1 class="tenez nina push-0">Postable Pastries</h1>
             <h2 class="mega nobel-reg push-0">Deliverable and Delicious Christmas Cookies</h2>
           </div>
@@ -31,16 +31,16 @@
       <div class="list-group-inline push-0 gutter-1-2">
         <div class="grid">
           <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
-             <a class="btn btn-ghost milli" href="index.html">Home</a>
+            <a class="btn btn-ghost milli" href="index.html">Home</a>
           </div>
           <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
-             <a class="btn btn-ghost milli" href="about.html">About</a>
+            <a class="btn btn-ghost milli" href="about.html">About</a>
           </div>
           <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
-             <a class="btn btn-ghost milli current" href="#">Featured</a>
+            <a class="btn btn-ghost milli current" href="featured.html">Featured</a>
           </div>
           <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
-             <a class="btn btn-ghost milli" href="#">Recipes</a>
+            <a class="btn btn-ghost milli" href="#">Recipes</a>
           </div>
         </div>
       </div>
@@ -48,42 +48,63 @@
 
   </header>
 
-  <main class="" role="main">
-<article class="">
+  <main role="main">
+    <article class="recipe-a">
 
 
-    <!-- Content -->
+      <!-- Content -->
 
-    <div class="grid pad-t-1-2">
-      <div class="unit xs-1 s-1 m-1 l-1 xl-1 push-1-2">
+      <div class="grid island-1-2">
+        <div class="unit xs-1 s-1 m-1 l-1 xl-1 push-0">
 
-        <div class="grid content-card-transparent">
-          <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 push">
-          </div>
-          <div class="unit xs-1 s-1 m-1 l-2-3 xl-2-3 push">
-          <h3 class="exa nobel-bold red-text push-1-4">Chocolate Chip Cookies</h3>
-          <p class="karmina micro">Intro Text</p>
-          </div>
-          <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 push">
-            <h4 class="nobel-bold">Ingredients</h4>
-            <p class="karmina milli">la la la</p>
-          </div>
-          <div class="unit xs-1 s-1 m-1 l-2-3 xl-2-3 push">
-          <h4 class="nobel-bold">preparation</h4>
-          <p class="karmina milli">Intro Text</p>
+          <div class="grid content-card-transparent">
+            <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 push">
+            </div>
+            <div class="unit xs-1 s-1 m-1 l-2-3 xl-2-3 push-1-4">
+              <h3 class="exa nobel-bold red-text push-1-4">Chocolate Chip Cookies</h3>
+              <p class="karmina micro push">Say goodbye to chocolate chip cookies that turn out like hockey pucks
+                This recipe is chewy and crispy with tons of flavour. Great for an ice cream sandwich, dunking in milk or just on their own!</p>
+              </div>
+              <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 push ing-col">
+                <h4 class="nobel-bold mega push-1-2">Ingredients</h4>
+                <p class="karmina milli ingredient">1 cup (2 sticks) unsalted butter, room temperature
+                </p>
+                <p class="karmina milli ingredient">¾ cup granulated sugar</p>
+                <p class="karmina milli ingredient">¾ cup dark brown sugar</p>
+                <p class="karmina milli ingredient">1 tsp corn syrup</p>
+                <p class="karmina milli ingredient">2 eggs, room temperature</p>
+                <p class="karmina milli ingredient">1 tsp vanilla extract</p>
+                <p class="karmina milli ingredient">2 cups all-purpose flour</p>
+                <p class="karmina milli ingredient">2 tsp Kosher salt</p>
+                <p class="karmina milli ingredient">¾ tsp baking soda</p>
+                <p class="karmina milli ingredient">1 8 oz semisweet chocolate bar, hand chopped</p>
+                <p class="karmina milli ingredient">Coarse sea salt</p>
+              </div>
+              <div class="unit xs-1 s-1 m-1 l-2-3 xl-2-3 push">
+                <h4 class="nobel-bold mega push-1-2">Preparation</h4>
+                <p class="karmina micro push-1-2">In a medium bowl, whisk together the flour, salt and baking powder, set aside.
+                </p>
+                <p class="karmina micro push-1-2">In the bowl of a stand mixer fitted with the paddle attachment, cream the butter and sugars together until doubled in volume and lighter in colour, 8-10 minutes. Add the eggs one at a time, mixing the first one in entirely before adding the second. Add the corn syrup and vanilla, mix until incorporated.
+                </p>
+                <p class="karmina micro push-1-2">Mix in the prepared flour mixture and chopped chocolate, mix until incorporated. Using a 1 oz scoop, scoop cookie dough onto a parchment lined baking sheet, cover with plastic wrap and chill overnight.
+                </p>
+                <p class="karmina micro push-1-2">When ready to bake, Preheat oven to 325F. Prepare 3 rimmed cookie sheets with parchment paper. Place cookies on baking sheet at least 3” apart and sprinkle tops with a small amount of coarse sea salt. Transfer cookie sheets to oven and bake until golden brown around the edges, 12-15 minutes, rotating pans halfway through baking.
+                </p>
+                <p class="karmina micro push-1-2">Cool for 5 minutes of baking sheet and then transfer to wire rack to cool entirely. Store in an airtight container at room temperature for up to 3 days, or as long as they last!
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</article>
-</main>
+    </article>
+  </main>
 
-<!-- Footer -->
-<footer class="island">
-  <small>Footer Content</small>
+  <!-- Footer -->
+  <footer class="island">
+    <small class="micro nobel-book white-text">© Postable Pastries 2020</small>
 
-</footer>
+  </footer>
 
 
 </body>
