--- a/index.html
+++ b/index.html
@@ -13,46 +13,50 @@
 
 <body>
 
-  <header role="banner" id="top">
+  <header role="banner">
     <!-- banner -->
     <div class="banner-container relative">
       <img class="img-flex" src="images/banner.jpg" alt="">
       <div class="heading grid grid-middle absolute stretch">
         <div class="unit stretch relative">
+
           <div class="text-center absolute pin-lc title">
             <h1 class="nina tenez push-0">Postable Pastries</h1>
             <h2 class="mega nobel-reg push-0">Deliverable and Delicious Christmas Cookies</h2>
           </div>
-          <!-- <div class="absolute pin-br top-btn">
+          <div class="absolute pin-br top-btn">
             <a href="#top" class="white-text btn btn-ghost milli nobel-reg" title="Back to Top"><img src="images/up-arrow.svg" class="img-flex arrow"></a>
-          </div> -->
+          </div>
+      </div>
+    </div>
+  </div>
+  <!-- nav -->
+  <nav class="push-0 pad-t-1-2 pad-b-1-2 relative" role="navigation">
+    <div class="absolute invisidiv" id="top">
+      &nbsp;
+    </div>
+    <div class="list-group-inline push-0 gutter-1-2">
+      <div class="grid">
+        <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
+          <a class="btn btn-ghost milli current" href="#">Home</a>
+        </div>
+        <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
+          <a class="btn btn-ghost milli" href="about.html">About</a>
+        </div>
+        <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
+          <a class="btn btn-ghost milli" href="featured.html">Featured</a>
+        </div>
+        <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
+          <a class="btn btn-ghost milli" href="#">Recipes</a>
         </div>
       </div>
     </div>
-    <!-- nav -->
-    <nav class="push-0 pad-t-1-2 pad-b-1-2" role="navigation">
-      <div class="list-group-inline push-0 gutter-1-2">
-        <div class="grid">
-          <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
-             <a class="btn btn-ghost milli current" href="#">Home</a>
-          </div>
-          <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
-             <a class="btn btn-ghost milli" href="about.html">About</a>
-          </div>
-          <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
-             <a class="btn btn-ghost milli" href="featured.html">Featured</a>
-          </div>
-          <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
-             <a class="btn btn-ghost milli" href="#">Recipes</a>
-          </div>
-        </div>
-      </div>
-    </nav>
+  </nav>
 
-  </header>
+</header>
 
-  <main class="" role="main">
-    <article class="">
+<main class="" role="main">
+  <article class="">
     <!-- CARDS -->
 
     <div class="grid island-1-2">
@@ -119,9 +123,10 @@
             </div>
           </div>
 
+        </div>
+      </div>
     </div>
-  </div>
-    </article>
+  </article>
 </main>
 
 <!-- Footer -->
