--- a/recipe-b.html
+++ b/recipe-b.html
@@ -23,11 +23,17 @@
             <h1 class="tenez nina push-0">Postable Pastries</h1>
             <h2 class="mega nobel-reg push-0">Deliverable and Delicious Christmas Cookies</h2>
           </div>
+          <div class="absolute pin-br top-btn">
+            <a href="#top" class="white-text btn btn-ghost milli nobel-reg" title="Back to Top"><img src="images/up-arrow.svg" class="img-flex arrow"></a>
+          </div>
         </div>
       </div>
     </div>
     <!-- nav -->
     <nav class="push-0 pad-t-1-2 pad-b-1-2" role="navigation">
+      <div class="absolute invisidiv" id="top">
+        &nbsp;
+      </div>
       <div class="list-group-inline push-0 gutter-1-2">
         <div class="grid">
           <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
