--- a/featured.html
+++ b/featured.html
@@ -19,7 +19,7 @@
       <img class="img-flex" src="images/banner.jpg" alt="">
       <div class="heading grid grid-middle absolute stretch">
         <div class="unit stretch relative">
-          <div class="text-center absolute pin-lc title">
+          <div class="absolute pin-lc title">
             <h1 class="nina tenez push-0">Postable Pastries</h1>
             <h2 class="mega nobel-reg push-0">Deliverable and Delicious Christmas Cookies</h2>
           </div>
