Add remaining content

--- a/featured.html
+++ b/featured.html
@@ -9,6 +9,8 @@
   <link href="css/main.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/wah7vpz.css">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon-196.png">
 </head>
 
 <body>
@@ -46,7 +48,7 @@
              <a class="btn btn-ghost milli current" href="featured.html">Featured</a>
           </div>
           <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
-             <a class="btn btn-ghost milli" href="#">Recipes</a>
+             <a class="btn btn-ghost milli" href="https://youtu.be/bFEoMO0pc7k?t=10">Recipes</a>
           </div>
         </div>
       </div>
@@ -54,8 +56,8 @@
 
   </header>
 
-  <main class="" role="main">
-    <article class="">
+  <main role="main">
+    <article>
     <!-- CARDS -->
 
     <div class="grid island-1-2">
@@ -129,7 +131,7 @@
 
 <!-- Footer -->
 <footer class="island">
-  <small class="micro nobel-book white-text">© Postable Pastries 2020</small>
+  <small role="contentinfo" class="micro nobel-book white-text">© Postable Pastries 2020</small>
 </footer>
 
 
