--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
   <link href="css/main.css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.typekit.net/wah7vpz.css">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon-196.png">
 </head>
 
 <body>
 
+  <a href="#main" class="skiplink">Jump to main content</a>
+
   <header role="banner">
     <!-- banner -->
     <div class="banner-container relative">
-      <img class="img-flex" src="images/banner.jpg" alt="">
+      <img class="img-flex" src="images/banner.jpg" alt="banner image">
       <div class="heading grid grid-middle absolute stretch">
         <div class="unit stretch relative">
 
@@ -25,7 +29,7 @@
             <h2 class="mega nobel-reg push-0">Deliverable and Delicious Christmas Cookies</h2>
           </div>
           <div class="absolute pin-br top-btn">
-            <a href="#top" class="white-text btn btn-ghost milli nobel-reg" title="Back to Top"><img src="images/up-arrow.svg" class="img-flex arrow"></a>
+            <a href="#top" class="white-text btn btn-ghost milli nobel-reg" title="Back to Top"><img src="images/up-arrow.svg" class="img-flex arrow" alt=""></a>
           </div>
       </div>
     </div>
@@ -47,7 +51,7 @@
           <a class="btn btn-ghost milli" href="featured.html">Featured</a>
         </div>
         <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
-          <a class="btn btn-ghost milli" href="#">Recipes</a>
+          <a class="btn btn-ghost milli" href="https://youtu.be/bFEoMO0pc7k?t=10">Recipes</a>
         </div>
       </div>
     </div>
@@ -55,11 +59,25 @@
 
 </header>
 
-<main class="" role="main">
-  <article class="">
+<main role="main">
+  <article>
     <!-- CARDS -->
 
     <div class="grid island-1-2">
+      <div class="unit xs-1 s-1 m-1 l-1 xl-1 push-1-2">
+        <div class="grid content-card-transparent">
+          <div class="unit xs-1 s-1 m-1 l-1 xl-1 push-0">
+            <h3 class="exa nobel-bold pink-text push-1-4">Welcome to Postable Pastries!</h3>
+            <p class="nobel-book">Find out more about who we are by clicking the link below. <br> Our Postable Pastry team wishes you and your lucky treat recipients a happy holiday season.</p>
+            <div>
+              <a href="about.html" class="btn-card push-0">About us</a>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+
 
       <div class="unit xs-1 s-1 m-1 l-1 xl-1 push-0">
         <div class="grid content-card-transparent">
@@ -131,7 +149,7 @@
 
 <!-- Footer -->
 <footer class="island">
-  <small class="micro nobel-book white-text">© Postable Pastries 2020</small>
+  <small role="contentinfo" class="micro nobel-book white-text">© Postable Pastries 2020</small>
 </footer>
 
 
