Hide skip links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <a href="#main" class="skiplink">Jump to main content</a>
+  <a href="#main" class="skiplink absolute pin-t">Jump to main content</a>
 
   <header role="banner">
     <!-- banner -->
@@ -23,7 +23,6 @@
       <img class="img-flex" src="images/banner.jpg" alt="banner image">
       <div class="heading grid grid-middle absolute stretch">
         <div class="unit stretch relative">
-
           <div class="absolute pin-lc title">
             <h1 class="nina tenez push-0">Postable Pastries</h1>
             <h2 class="mega nobel-reg push-0">Deliverable and Delicious Christmas Cookies</h2>
@@ -35,7 +34,7 @@
       </div>
     </div>
     <!-- nav -->
-    <nav class="push-0 pad-t-1-2 pad-b-1-2 relative" role="navigation">
+    <nav class="push-0 pad-t-1-2 pad-b-1-2" role="navigation">
       <div class="absolute invisidiv" id="top">
         &nbsp;
       </div>
