--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
             <li> <a class="btn btn-ghost milli" href="featured.html">Featured</a> </li>
           </div>
           <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
-            <li> <a class="btn btn-ghost milli" href="https://youtu.be/bFEoMO0pc7k?t=10">Recipes</a> </li>
+            <li> <a class="btn btn-ghost milli" href="https://youtu.be/bFEoMO0pc7k?t=10" target="_blank">Recipes</a> </li>
           </div>
         </div>
       </ul>
