--- a/recipe-d.html
+++ b/recipe-d.html
@@ -48,7 +48,7 @@
             <a class="btn btn-ghost milli current" href="featured.html">Featured</a>
           </div>
           <div class="unit xs-1 s-1 m-1-2 l-1-4 island-1-4 gutter-1-2">
-            <a class="btn btn-ghost milli" href="https://youtu.be/bFEoMO0pc7k?t=10">Recipes</a>
+            <a class="btn btn-ghost milli" href="https://youtu.be/bFEoMO0pc7k?t=10" target="_blank">Recipes</a>
           </div>
         </div>
       </div>
